welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var TCouleur: Array[Int];
            ^Array1:10: error: type mismatch;
 found   : java.awt.Color
 required: Int
			TCouleur(n) = getCouleurSol();
                                                   ^